Initial commit with Surat project

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-DB_NAME=DB_NAME
-HOST=HOST
-USER_NAME=USER_NAME
-PASSWORD=PASSWORD
-PORT=PORT
+DB_NAME=onkardb
+HOST=127.0.0.1
+USER_NAME=root
+PASSWORD=onkar123
+PORT=3306
